- Added video texture playback  - Added interactions with hologram and video through buttons and form inputs  - Checkboxes and radio buttons are now filled in black if they are checked  - Moved a-frame and jquery to local hosted versions (external servers were a bit slow today and this is better for distributory purposes anyway)  - Fixed some smaller bugs with form inputs and clipping initialization

--- a/demos/hologram/css/css.css
+++ b/demos/hologram/css/css.css
@@ -17,12 +17,27 @@ body {
 }
     #mediaContentContainer{
         height: 449px;
+        position: relative;
     }
 
         #hologramCanvas{
+            position: absolute;
             width: 100%;
             height: 100%;
-            border: 1px solid blue;
+            /*border: 1px solid blue;*/
+        }
+
+            #hologramCanvas canvas{
+                position: absolute;
+                z-index: 100;
+                pointer-events: none;
+            }
+
+        #video{
+            position: absolute;
+            top: 175px;
+            left: 0px;
+            width: 100%;
         }
 
     #controlsContainer{
